[gd_scene load_steps=14 format=4 uid="uid://cxo1p2pe1wy0j"]

[ext_resource type="Script" uid="uid://d1ny0ykilsy5o" path="res://character/enemy/shnibber/shnibber.gd" id="1_qq37m"]
[ext_resource type="PackedScene" uid="uid://cxr60bx56li3o" path="res://mechanics/health.tscn" id="2_jrq30"]
[ext_resource type="AudioStream" uid="uid://duq4gc2vw853j" path="res://assets/sfx/death/hurt_rat_02.ogg" id="3_6s6l5"]
[ext_resource type="Texture2D" uid="uid://bmss0jpsjuvbp" path="res://assets/misc/corshair.png" id="3_t0nwx"]
[ext_resource type="AudioStream" uid="uid://d1orc3c018dsj" path="res://assets/sfx/death/hurt_rat_01.ogg" id="4_hdavi"]
[ext_resource type="PackedScene" uid="uid://bnk5012wxbkep" path="res://effects/blood.tscn" id="5_6s6l5"]
[ext_resource type="PackedScene" uid="uid://c3vyhjohw70vj" path="res://character/enemy/shnibber/spr_cornea.tscn" id="6_hdavi"]

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_t0nwx"]
_data = PackedByteArray("AAADAAUAAAABAAAAgAAAAIIAAABiBAAAUklGRloEAABXRUJQVlA4TE0EAAAvf0AgECcgECAEOfHfY0MgQNjwHyKNQIAQIcT/nPkPAPBXUYF2bat1ZEvKwIxWBPZJwI0SKIv8gxKwAdd9/kX034HbtpGkdNbTmd2F0jke0f4xioje8TrIVILjI6NvO1fq1xNeaiNaIzHUhxp9xHqpHyW8dA+IEQVtGZkP8NoGo8degir2cjJBEfZKFWalvAb2KsNluM4qs6rcXOXmIo1SEPYqc9yeyctlz1PyYj61HkNyUvTi63QVX1fHH+hFOJf92ul5cl4iyEsjkScq/Rn0Wn7LxeHygjy4L2bvFQTEHQsaA1DOC0KWK+BB63JnvUaPvM6o1vBn0kgPvnkl6MEZDr02wTfPkCf0uqr8KUBgHl+YIqdQcFkyXgP3daa86nTr9RJXBqnylHn+BvRvI+8hZeT/LivtNb5P+5sjAVx475CBY37LPJ6DlVliqddV5kosC1nIwgmv4UlOta2q12gBV2JZil6I/cPMwggk6QVom0RjDybtRR6WRGOCYYOkvRr5xhi1hbmd10x4+cZ8XLit4b1uEBx4AfY0WpnH0CB+MBsJ5xVORaDXJKSV94KRKO5QK/By9IYjofXTG44E26sWvJclG2iOI5c4Cume/VTidUl5RYCrCjJYl4xXxK1LwaaWbetlr0Z6JYhutkX9da/jY64E7bJab3sZI2dItLXqXv949cLSUE+Jkiu9SlTk+FC0p6L0cS8Uov29oDHTjWus6x8EXsdHbXVzQw0o+FfTiDXTU+oFMbZuA1/FaX0DswFZilTwLeXhMnedVWZVublK3YtS0Ktex+2ZfglHD7wy2VN9MZ+7npRXisxhvk5bKpHxYld2QMgu1jT7fpcS94WTY2tBidQNxcjP3RhxW/M68Rg9uu2mGe6g0iMmK/BQyJJwAMhx4oILeyhTgXcX9LotO3GsEazLDP5VGdFTwWdUa/TwsQ4CnrhXEgGsxN7SAPh5NAVQlSPLKVR5ayydUvBfZ4IB+kpsrAwMV+AEzPvHdZ6IuTgLvYG/WfAfAO4C3b8VgucFNDF6FQFeaL0WRDyyuUqgp5bB7nobdIj5ax9gl929/zpwZ+nPvgA+qH/0KhMzWettoufGjK8iE7PSDOiFJ/6Xo07htcPC8LktQ5vg0FxzQY4l1feO/Vg4ZZ8p81thRrBxuQqwNS0Thwg5bnPf8kSYXwp5klO9rdAPGd36RkJ77b4vSzR9ELTw1C4CpFlmNESBX1y7V3zXRpjgKEfAZDQ0oRc5HxiPejUP+1bX9Bl5LQkPyYYiL2aYkdftw45fq9EBZMIMK7ACr+YRtrXELitqzEihCr2IFx4ihoaKVjDEzfEUl/eCkVwWHBjnFYb7wQJtFeOnRWKptnDETApoCJ/Vvn56BIWEWg3dGclsh2mGyHmNGFItZqKbl8kYs7VjixmvFnt9dq9EvRHxLkp40cetBd3MPxSzfV2vB+2tt5RY9wIUbs4XCOztrWoA")
size_override = Vector2(128, 130)

[sub_resource type="Animation" id="Animation_qq37m"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_e7qw3"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_aeqiy"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jrq30"]
_data = {
&"idle": SubResource("Animation_qq37m"),
&"injure": SubResource("Animation_e7qw3"),
&"walk": SubResource("Animation_aeqiy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_t0nwx"]
radius = 28.01785

[node name="shnibber" type="CharacterBody2D"]
script = ExtResource("1_qq37m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -31)
texture = SubResource("PortableCompressedTexture2D_t0nwx")
hframes = 2
vframes = 2
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"scale": "1.0",
"slice": "",
"source": "res://assets/character/enemy/shnibber.aseprite",
"source_uid": 1369187438542757965
}
metadata/_aseprite_wizard_source_file_hash_ = "4a836a0b13d483c5692ff40514480197"

[node name="Node2D" type="Node2D" parent="Sprite2D"]
position = Vector2(10, 2)

[node name="spr_cornea" parent="Sprite2D/Node2D" instance=ExtResource("6_hdavi")]
modulate = Color(0, 0, 0, 1)

[node name="Corshair" type="Sprite2D" parent="Sprite2D/Node2D"]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("3_t0nwx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Collision2D")
libraries = {
&"": SubResource("AnimationLibrary_jrq30")
}

[node name="Collision2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_t0nwx")

[node name="Health" parent="." instance=ExtResource("2_jrq30")]
hurt_sound = ExtResource("3_6s6l5")
death_sound = ExtResource("4_hdavi")

[node name="blood" parent="." instance=ExtResource("5_6s6l5")]

[node name="tmr_recover" type="Timer" parent="."]
wait_time = 0.3

[node name="mkr_right" type="Marker2D" parent="."]
position = Vector2(6, -29)

[node name="mkr_left" type="Marker2D" parent="."]
position = Vector2(-10, -29)

[connection signal="timeout" from="tmr_recover" to="." method="_on_tmr_recover_timeout"]
